--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ asgiref==3.8.1
 backports.zoneinfo==0.2.1
 bleach==6.1.0
 cffi==1.17.1
+cfgv==3.4.0
+coverage==7.6.1
 cryptography==43.0.3
 diff-match-patch==20241021
+distlib==0.3.9
 Django==4.2.16
 django-environ==0.11.2
 django-import-export==4.1.1
@@ -12,15 +15,28 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-api-logger==1.1.16
 drf-yasg==1.21.8
+exceptiongroup==1.2.2
+filelock==3.16.1
+identify==2.6.1
 inflection==0.5.1
+iniconfig==2.0.0
+nodeenv==1.9.1
 packaging==24.1
+platformdirs==4.3.6
+pluggy==1.5.0
+pre-commit==3.5.0
 pycparser==2.22
 PyJWT==2.9.0
+pytest==8.3.3
+pytest-cov==5.0.0
+pytest-django==4.9.0
 pytz==2024.2
 PyYAML==6.0.2
 six==1.16.0
 sqlparse==0.5.1
 tablib==3.5.0
+tomli==2.0.2
 typing-extensions==4.12.2
 uritemplate==4.1.1
+virtualenv==20.27.0
 webencodings==0.5.1
