--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ distlib==0.3.9
 Django==5.1.3
 django-environ==0.11.2
 django-import-export==4.2.0
+django-rest-passwordreset==1.5.0
 django-simple-history==3.7.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
