--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 bleach==6.2.0
+certifi==2024.8.30
 cffi==1.17.1
 cfgv==3.4.0
 coverage==7.6.4
@@ -31,8 +32,10 @@ pytest-cov==6.0.0
 pytest-django==4.9.0
 pytz==2024.2
 PyYAML==6.0.2
+sentry-sdk==2.18.0
 sqlparse==0.5.1
 tablib==3.7.0
 uritemplate==4.1.1
+urllib3==2.2.3
 virtualenv==20.27.1
 webencodings==0.5.1
